--- a/css/tougle.css
+++ b/css/tougle.css
@@ -5,7 +5,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #262626 !important;
+  background-color: #2b013b !important;
 }
 
 .topnav a {
@@ -19,7 +19,7 @@ body {
 }
 
 .topnav a:hover {
-  color: #ff006c;
+  color: #8f065a;
 }
 
 .active {
