--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -21,7 +21,7 @@
 *********************************/ 
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block;min-height:310px;}
+.flexslider .slides img {width: 100%; display: block;min-height:310px; max-height: 313px; }
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
@@ -67,7 +67,6 @@ html[xmlns] .slides {display: block;}
 	
 }
 .flexslider1 ol.flex-control-nav{
-	width: ;
 	position: absolute;
 	bottom: -49px;
 	text-align: center;
